--- a/VirtualAnimal/VirtualAnimal/VirtualAnimal.csproj
+++ b/VirtualAnimal/VirtualAnimal/VirtualAnimal.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="Animal.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="SaveAndUpdate.cs" />
+    <Compile Include="DataRecovery.cs" />
     <Compile Include="VirtualAnimalFood.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +94,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -107,6 +108,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Save_Animal.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Store_Data.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
